--- a/app/src/main/res/drawable/bg_reload_btn.xml
+++ b/app/src/main/res/drawable/bg_reload_btn.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorWhite"/>
+    <stroke android:color="@color/colorPrimaryToolbar"
+        android:width="@dimen/dp_1"/>
     <corners android:radius="20dp"/>
 </shape>
