--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,12 +13,22 @@
             android:id="@+id/home_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <com.scwang.smartrefresh.layout.header.ClassicsHeader
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </com.scwang.smartrefresh.layout.header.ClassicsHeader>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/home_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             </androidx.recyclerview.widget.RecyclerView>
+            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </com.scwang.smartrefresh.layout.footer.ClassicsFooter>
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
     </FrameLayout>
