--- a/app/src/main/res/layout/layout_home_item.xml
+++ b/app/src/main/res/layout/layout_home_item.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:padding="@dimen/dp_10">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -20,10 +20,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_article_tag_shape"
                 android:text="@string/article_top"
-                android:layout_marginRight="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_10"
                 android:textColor="@color/color_article_tag"
-                android:padding="3dp"
-                android:textSize="@dimen/sp_12"
+                android:padding="@dimen/dp_3"
+                android:textSize="@dimen/sp_8"
                 android:layout_alignParentLeft="true"/>
             <TextView
                 android:id="@+id/article_item_author_tv"
@@ -43,6 +43,7 @@
                 android:layout_gravity="right|center_vertical"
                 android:text="10分钟前"
                 android:textSize="@dimen/sp_12"
+                android:textColor="@color/color_article_time"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"/>
         </RelativeLayout>
@@ -50,30 +51,32 @@
             android:id="@+id/article_item_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/dp_10"
             android:textSize="@dimen/sp_16"
+            android:textColor="@color/color_dark"
             android:text="Android职业进阶课程免费送"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_20">
+            android:layout_marginTop="@dimen/dp_15">
             <TextView
                 android:id="@+id/article_item_chapter_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/color_article_tag"
+                android:textSize="@dimen/sp_12"
+                android:textColor="@color/color_article_author"
                 android:text="干货资源/课程推荐"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 />
+
             <ImageView
                 android:id="@+id/article_item_collect_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/dp_30"
+                android:layout_height="@dimen/dp_30"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/article_collect_selector"
-                android:layout_centerVertical="true"/>
+                android:layout_centerVertical="true"
+                android:src="@drawable/article_collect_selector" />
         </RelativeLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
