--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -132,6 +132,7 @@
 
     <!--尺寸 sp 从小到大-->
     <dimen name="sp_6">6sp</dimen>
+    <dimen name="sp_8">8sp</dimen>
     <dimen name="sp_10">10sp</dimen>
     <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_13">13sp</dimen>
