--- a/app/src/main/res/layout/layout_flow_tag.xml
+++ b/app/src/main/res/layout/layout_flow_tag.xml
@@ -7,6 +7,6 @@
     android:textColor="@color/colorWhite"
     android:text="@string/website"
     android:padding="@dimen/dp_5"
-    android:background="@color/color_tag_five">
+    android:background="@color/color_tag_one">
 
 </TextView>
