--- a/app/src/main/res/layout/activity_search_list.xml
+++ b/app/src/main/res/layout/activity_search_list.xml
@@ -14,12 +14,13 @@
     <FrameLayout
         android:id="@+id/page_content_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/search_list_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+            >
             <com.scwang.smartrefresh.layout.header.ClassicsHeader
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
