--- a/app/src/main/res/layout/layout_search_history_item.xml
+++ b/app/src/main/res/layout/layout_search_history_item.xml
@@ -3,11 +3,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginVertical="@dimen/dp_5"
     >
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_search_history"
+        android:layout_width="@dimen/dp_20"
+        android:layout_height="@dimen/dp_20"
+        android:src="@drawable/icon_history"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"/>
     <TextView
