--- a/app/src/main/res/layout/fragment_knowledge_list.xml
+++ b/app/src/main/res/layout/fragment_knowledge_list.xml
@@ -3,28 +3,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Knowledge.Fragment.KnowledgeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Knowledge.Fragment.KnowledgeListFragment">
 
     <FrameLayout
         android:id="@+id/page_content_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            android:id="@+id/knowledge_refresh_layout"
+            android:id="@+id/knowledge_list_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <com.scwang.smartrefresh.layout.header.ClassicsHeader
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
             </com.scwang.smartrefresh.layout.header.ClassicsHeader>
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/knowledge_rv"
+                android:id="@+id/knowledge_list_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                >
+                android:background="@color/color_login_btn">
 
             </androidx.recyclerview.widget.RecyclerView>
+            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </com.scwang.smartrefresh.layout.footer.ClassicsFooter>
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </FrameLayout>
 
