--- a/app/src/main/res/layout/layout_common_toolbar.xml
+++ b/app/src/main/res/layout/layout_common_toolbar.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/sp_18"
         android:textColor="@color/colorWhite"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
         android:singleLine="true"
         android:ellipsize="marquee"
         android:text="标题"
