--- a/app/src/main/res/layout/layout_content_item.xml
+++ b/app/src/main/res/layout/layout_content_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/dp_3"
-    android:layout_margin="@dimen/dp_10">
+    android:layout_marginHorizontal="@dimen/dp_10"
+    android:layout_marginVertical="@dimen/dp_5">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
