--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,8 @@
     <color name="color_article_tag">#D81B60</color>
     <color name="color_article_author">#808080</color>
     <color name="color_article_time">#D3D3D3</color>
-    <color name="color_divider">#A9A9A9</color>
+    <color name="color_article_desc">#726d70</color>
+    <color name="color_divider">#E0E0E0</color>
     <color name="color_login_btn">#D81B60</color>
     <color name="color_register_btn">#3CB371</color>
     <color name="color_dialog_title">#000000</color>
@@ -26,4 +27,5 @@
     <color name="color_search_hint">#d8ecef</color>
     <color name="color_hot_search">#ff3000</color>
     <color name="color_search_common">#00ddff</color>
+    <color name="color_bg_light_grey">#EEEEEE</color>
 </resources>
