--- a/app/src/main/res/layout/layout_home_item.xml
+++ b/app/src/main/res/layout/layout_home_item.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/dp_3"
-    android:layout_marginVertical="@dimen/dp_5"
-    android:layout_marginHorizontal="@dimen/dp_10"
+    app:cardCornerRadius="@dimen/dp_0"
+    android:layout_marginBottom="@dimen/dp_5"
+    android:layout_marginTop="@dimen/dp_5"
+    android:foreground="?attr/selectableItemBackground"
     >
     <LinearLayout
         android:orientation="vertical"
