--- a/app/src/main/res/layout/layout_knowledge_item.xml
+++ b/app/src/main/res/layout/layout_knowledge_item.xml
@@ -4,8 +4,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/dp_3"
-    android:layout_margin="@dimen/dp_5">
+    app:cardCornerRadius="@dimen/dp_0"
+    android:layout_marginTop="@dimen/dp_5"
+    android:layout_marginBottom="@dimen/dp_5"
+    android:layout_marginLeft="@dimen/dp_2"
+    android:layout_marginRight="@dimen/dp_2"
+    android:foreground="?attr/selectableItemBackground"
+    >
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
