--- a/app/src/main/res/layout/layout_project_list_adapter.xml
+++ b/app/src/main/res/layout/layout_project_list_adapter.xml
@@ -4,15 +4,18 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="@dimen/dp_10"
-    android:layout_marginHorizontal="@dimen/dp_0"
+    android:layout_marginTop="@dimen/dp_5"
+    android:layout_marginBottom="@dimen/dp_5"
+    android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="@dimen/dp_0">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_180"
-        android:paddingHorizontal="@dimen/dp_14"
-        android:paddingVertical="@dimen/dp_10"
+        android:paddingLeft="@dimen/dp_14"
+        android:paddingRight="@dimen/dp_14"
+        android:paddingBottom="@dimen/dp_10"
+        android:paddingTop="@dimen/dp_10"
         >
         <ImageView
             android:id="@+id/project_list_item_thumb_iv"
@@ -39,7 +42,7 @@
                 android:id="@+id/project_list_item_desc_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_12"
+                android:textSize="@dimen/sp_14"
                 android:textColor="@color/color_article_desc"
                 android:text="内容"
                 android:layout_marginTop="@dimen/dp_10"
