--- a/app/src/main/res/layout/layout_project_list_adapter.xml
+++ b/app/src/main/res/layout/layout_project_list_adapter.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_16"
-                android:textColor="@color/color_dark"
+                android:textColor="@color/common_text_default"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="标题"/>
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_14"
-                android:textColor="@color/color_article_desc"
+                android:textColor="@color/item_article_desc"
                 android:text="内容"
                 android:layout_marginTop="@dimen/dp_10"
                 android:ellipsize="end"
@@ -54,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_12"
-                android:textColor="@color/color_article_time"
+                android:textColor="@color/item_article_time"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
                 android:text="时间"
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/sp_12"
-                android:textColor="@color/color_article_author"
+                android:textColor="@color/item_article_author"
                 android:layout_alignParentBottom="true"
                 android:layout_marginLeft="@dimen/dp_10"
                 android:layout_toRightOf="@+id/project_list_item_time_tv"
