--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,31 +3,31 @@
     <color name="colorPrimary">#645f62</color>
     <color name="colorPrimaryDark">#645f62</color>
     <color name="colorAccent">#645f62</color>
-    <color name="colorWhite">#ffffff</color>
+    <color name="common_bg">#ffffff</color>
     <color name="colorBg">#645f62</color>
-    <color name="color_dark">#645f62</color>
-    <color name="colorPrimaryToolbar">#645f62</color>
-    <color name="color_tab_item_normal">#A9A9A9</color>
-    <color name="color_tab_item_select">#FFFFFF</color>
-    <color name="color_article_tag">#808080</color>
-    <color name="color_article_author">#808080</color>
-    <color name="color_article_time">#D3D3D3</color>
-    <color name="color_article_desc">#726d70</color>
-    <color name="color_divider">#E0E0E0</color>
-    <color name="color_login_btn">#645f62</color>
-    <color name="color_register_btn">#645f62</color>
-    <color name="color_dialog_title">#645f62</color>
-    <color name="color_dialog_content">#A9A9A9</color>
-    <color name="color_dialog_cancel">#A9A9A9</color>
-    <color name="color_dialog_confirm">#645f62</color>
-    <color name="color_tag_one">#D3D3D3</color>
-    <color name="color_tag_two">#D3D3D3</color>
-    <color name="color_tag_three">#D3D3D3</color>
-    <color name="color_tag_four">#D3D3D3</color>
-    <color name="color_tag_five">#D3D3D3</color>
-    <color name="color_search_btn">#645f62</color>
-    <color name="color_search_hint">#d8ecef</color>
-    <color name="color_hot_search">#645f62</color>
-    <color name="color_search_common">#645f62</color>
-    <color name="color_bg_light_grey">#EEEEEE</color>
+    <color name="common_text_default">#645f62</color>
+    <color name="toolbar">#645f62</color>
+    <color name="tab_item_default">#A9A9A9</color>
+    <color name="tab_item_select">#FFFFFF</color>
+    <color name="item_article_tag">#808080</color>
+    <color name="item_article_author">#808080</color>
+    <color name="item_article_time">#D3D3D3</color>
+    <color name="item_article_desc">#726d70</color>
+    <color name="divider_line">#E0E0E0</color>
+    <color name="bg_login_btn">#645f62</color>
+    <color name="bg_register_btn">#645f62</color>
+    <color name="common_dialog_title">#645f62</color>
+    <color name="common_dialog_content">#A9A9A9</color>
+    <color name="common_dialog_cancel">#A9A9A9</color>
+    <color name="common_dialog_confirm">#645f62</color>
+    <color name="flow_tag_one">#D3D3D3</color>
+    <color name="flow_tag_two">#D3D3D3</color>
+    <color name="flow_tag_three">#D3D3D3</color>
+    <color name="flow_tag_four">#D3D3D3</color>
+    <color name="flow_tag_five">#D3D3D3</color>
+    <color name="bg_search_btn">#645f62</color>
+    <color name="search_hint">#d8ecef</color>
+    <color name="hot_search_tag">#645f62</color>
+    <color name="search_common">#645f62</color>
+    <color name="bg_light_grey">#EEEEEE</color>
 </resources>
