--- a/app/src/main/res/drawable/bg_article_tag_shape.xml
+++ b/app/src/main/res/drawable/bg_article_tag_shape.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/dp_2"/>
-    <stroke android:color="@color/color_article_tag"
+    <stroke android:color="@color/item_article_tag"
         android:width="@dimen/dp_1"/>
 </shape>
