--- a/app/src/main/res/drawable/bg_login_btn_shape.xml
+++ b/app/src/main/res/drawable/bg_login_btn_shape.xml
@@ -6,5 +6,5 @@
         android:topLeftRadius="@dimen/dp_6"
         android:topRightRadius="@dimen/dp_6" />
 
-    <solid android:color="@color/color_login_btn" />
+    <solid android:color="@color/bg_login_btn" />
 </shape>
