--- a/app/src/main/res/drawable/bg_search_btn.xml
+++ b/app/src/main/res/drawable/bg_search_btn.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/dp_20"/>
-    <solid android:color="@color/color_search_btn"/>
+    <solid android:color="@color/bg_search_btn"/>
 </shape>
