--- a/app/src/main/res/drawable/tab_item_icon_selector.xml
+++ b/app/src/main/res/drawable/tab_item_icon_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="@color/color_tab_item_select"/>
-    <item android:state_checked="false" android:color="@color/color_tab_item_normal"/>
+    <item android:state_checked="true" android:color="@color/tab_item_select"/>
+    <item android:state_checked="false" android:color="@color/tab_item_default"/>
 </selector>
