--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login.LoginActivity"
-    android:background="@color/colorWhite">
+    android:background="@color/common_bg">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         android:text="@string/login"
         android:textSize="@dimen/sp_36"
         android:gravity="center"
-        android:textColor="@color/color_dark"
+        android:textColor="@color/common_text_default"
         android:layout_marginTop="@dimen/dp_30"
         />
     <androidx.cardview.widget.CardView
@@ -52,7 +52,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_1"
-                android:background="@color/color_divider"
+                android:background="@color/divider_line"
                 android:layout_marginVertical="20dp"/>
             <EditText
                 android:id="@+id/login_psw_et"
@@ -79,7 +79,7 @@
             android:layout_marginHorizontal="@dimen/dp_60"
             android:background="@drawable/bg_login_btn_shape"
             android:text="@string/login"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/common_bg"
             android:textSize="@dimen/sp_18"
             />
         <TextView
@@ -96,7 +96,7 @@
             android:layout_marginHorizontal="@dimen/dp_60"
             android:background="@drawable/bg_register_btn_shape"
             android:text="@string/register"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/common_bg"
             android:textSize="@dimen/sp_18"
             />
     </LinearLayout>
