--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
+    android:background="@color/common_bg"
     android:fitsSystemWindows="true"
     tools:context=".main.MainActivity">
 
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             app:layout_behavior="@string/bye_burger_bottom_behavior"
-            android:background="@color/colorWhite"
+            android:background="@color/common_bg"
             app:itemIconTint="@drawable/tab_item_icon_selector"
             app:itemTextColor="@drawable/tab_item_icon_selector"
             app:labelVisibilityMode="labeled"
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/colorWhite"
+        android:background="@color/common_bg"
         app:headerLayout="@layout/layout_main_drawer_header"
         app:menu="@menu/drawer_header_menu"
         >
