--- a/app/src/main/res/layout/layout_flow_tag.xml
+++ b/app/src/main/res/layout/layout_flow_tag.xml
@@ -4,9 +4,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dp_5"
-    android:textColor="@color/colorWhite"
+    android:textColor="@color/common_bg"
     android:text="@string/website"
     android:padding="@dimen/dp_5"
-    android:background="@color/color_tag_one">
+    android:background="@color/flow_tag_one">
 
 </TextView>
