--- a/app/src/main/res/layout/layout_nav_adapter_item.xml
+++ b/app/src/main/res/layout/layout_nav_adapter_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/nav_item_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/color_dark"
+        android:textColor="@color/common_text_default"
         android:textSize="@dimen/sp_16"
         android:text="常用网站"
         />
