--- a/app/src/main/res/layout/layout_search_history_item.xml
+++ b/app/src/main/res/layout/layout_search_history_item.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:text="搜索历史"
         android:textSize="@dimen/sp_14"
-        android:textColor="@color/color_dark"
+        android:textColor="@color/common_text_default"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"/>
 </RelativeLayout>
