--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,31 +3,30 @@
     <color name="colorPrimary">#3CB371</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorWhite">#ffffff</color>
-    <color name="color_dark">#000000</color>
-    <color name="colorBg">#FFFFFF</color>
-    <color name="colorPrimaryToolbar">#3CB371</color>
-    <color name="color_tab_item_normal">#A9A9A9</color>
-    <color name="color_tab_item_select">#3CB371</color>
-    <color name="color_article_tag">#D81B60</color>
-    <color name="color_article_author">#808080</color>
-    <color name="color_article_time">#D3D3D3</color>
-    <color name="color_article_desc">#726d70</color>
-    <color name="color_divider">#E0E0E0</color>
-    <color name="color_login_btn">#D81B60</color>
-    <color name="color_register_btn">#3CB371</color>
-    <color name="color_dialog_title">#000000</color>
-    <color name="color_dialog_content">#A9A9A9</color>
-    <color name="color_dialog_cancel">#A9A9A9</color>
-    <color name="color_dialog_confirm">#3CB371</color>
-    <color name="color_tag_one">#00ffd3</color>
-    <color name="color_tag_two">#00a0ff</color>
-    <color name="color_tag_three">#00ff8e</color>
-    <color name="color_tag_four">#00f4ff</color>
-    <color name="color_tag_five">#ffc900</color>
-    <color name="color_search_btn">#ee3400</color>
-    <color name="color_search_hint">#d8ecef</color>
-    <color name="color_hot_search">#ff3000</color>
-    <color name="color_search_common">#00ddff</color>
-    <color name="color_bg_light_grey">#EEEEEE</color>
+    <color name="common_bg">#ffffff</color>
+    <color name="common_text_default">#000000</color>
+    <color name="toolbar">#3CB371</color>
+    <color name="tab_item_default">#A9A9A9</color>
+    <color name="tab_item_select">#3CB371</color>
+    <color name="item_article_tag">#D81B60</color>
+    <color name="item_article_author">#808080</color>
+    <color name="item_article_time">#D3D3D3</color>
+    <color name="item_article_desc">#726d70</color>
+    <color name="divider_line">#E0E0E0</color>
+    <color name="bg_login_btn">#D81B60</color>
+    <color name="bg_register_btn">#3CB371</color>
+    <color name="common_dialog_title">#000000</color>
+    <color name="common_dialog_content">#A9A9A9</color>
+    <color name="common_dialog_cancel">#A9A9A9</color>
+    <color name="common_dialog_confirm">#3CB371</color>
+    <color name="flow_tag_one">#00ffd3</color>
+    <color name="flow_tag_two">#00a0ff</color>
+    <color name="flow_tag_three">#00ff8e</color>
+    <color name="flow_tag_four">#00f4ff</color>
+    <color name="flow_tag_five">#ffc900</color>
+    <color name="bg_search_btn">#ee3400</color>
+    <color name="search_hint">#d8ecef</color>
+    <color name="hot_search_tag">#ff3000</color>
+    <color name="search_common">#00ddff</color>
+    <color name="bg_light_grey">#EEEEEE</color>
 </resources>
